Added validation and submit button

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
 	padding: 0;
-	border: 1px solid red;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
@@ -50,7 +49,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: rgb(255, 242, 222);
+    background-color: rgb(244, 219, 182);
 
     font-family: "Helvetica", "Arial", sans-serif;
 }
@@ -65,14 +64,16 @@ body {
     flex-wrap: wrap;
     flex: 0 1 1300px;
     margin: 20vh;
-    height: 700px;
+    height: 772px;
 }
 
 .left {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
+    flex-direction: column;
     flex-wrap: wrap;
+    gap: 10px;
 
     flex: 1 1 300px;
     background-color: rgb(226, 194, 255);
@@ -88,11 +89,13 @@ body {
 }
 .form-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     flex-wrap: wrap;
-    gap: 20px;
+
+    margin-top: 27px;
 }
 .form-row {
+    padding: 10px;
     flex: 0 1 300px;
     display: flex;
     
@@ -112,45 +115,80 @@ body {
     font-size: 14px;
 }
 
+.form-row input[type='text']:invalid,
+.form-row input[type='email']:invalid,
+.form-row input[type='password']:invalid {
+    background-color: #ff9696;
+    border: 1px solid #ff4b4b;
+    border-radius: 3px;
+    width: 100%;
+    padding: 7px;
+    font-size: 14px;
+}
+
 .form-row label {
     margin-bottom: 10px;
 }
+#button-container {
+    display: flex;
+    flex-direction: row;
+}
+#button-container p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
-/* Mobile Styles */
+.form-row button {
+    flex: 0 1 auto;
+    width: 200px;
+    margin: 20px;
+    font-size: 16px;
+    font-weight: bold;
+  
+    color: #FFFFFF;
+    background-color: #fc45c6;
+  
+    border: none;
+    border-radius: 8px;
+  
+    padding: 10px 40px;
+    cursor: pointer;
+  }
+  
+  .form-row button:hover {
+    background-color: #ff80d9;
+  }
+  
+  .form-row button:active {
+    background-color: #df32ab;
+  }
+
+  /* Mobile Styles */
 @media only screen and (max-width: 400px) {
-    body {
-        background-color: #F09A9D; /* Red */
-    }
     .container {
         margin: 3vh;
         box-shadow: 5px 5px white;
     }
-    .bubble-container{
-        font-size: 0;
-        visibility: hidden;
+    .form-row button {
+        align-self: center;
     }
 }
 
 /* Tablet Styles */
 @media only screen and (min-width: 401px) and (max-width: 960px) {
-    body {
-        background-color: #F5CF8E; /* Yellow */
-    }
     .container {
         margin: 10vh;
         box-shadow: 10px 10px white;
     }
-    .bubble-container{
-        font-size: 0;
-        visibility: hidden;
+    #button-container {
+        justify-content: center;
+        align-items: center;
     }
 }
 
 /* Desktop Styles */
 @media only screen and (min-width: 961px) {
-    body {
-        background-color: #B2D6FF; /* Blue */
-    }
     .bubble-container{
         display: flex;
         justify-content: center;
@@ -180,5 +218,17 @@ body {
         border-radius: 10px;
         padding: 5px;
         width: 20px;
+    }
+}
+@media only screen and (max-width: 1029px) { 
+    /* Take out pic when smaller screen */
+    .left {
+        flex-direction: row;
+    }
+    .bubble-container .bubble{
+        font-size: 0;
+        visibility: hidden;
+        padding: 0;
+        margin: 0;
     }
 }
